--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
     display: inline-grid;
     grid-template-columns: repeat(10, 50px);
     grid-template-rows: repeat(10, 50px);
-    background: url("/css/snake.jpg");
+    background: url("background.jpg");
     background-repeat: no-repeat;
     background-size: 500px 500px;
     /* justify-content: center;
@@ -24,8 +24,8 @@
   }
   .dice-div{
     display: flex;
-    gap: 30px;
-    justify-content: space-evenly;
+    gap: 20px;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
   }
@@ -34,4 +34,40 @@
     font-weight: bold;
     margin-top: 10px;
     color: green;
+    width: 300px;
   }
+  .player1{
+    width: 10px;
+    height: 10px;
+    background-color: red;
+  }
+  .player2{
+    width: 10px;
+    height: 10px;
+    background-color: blue;
+  }
+  .players{
+    display: flex;
+    gap: 10px;
+    justify-content: space-evenly;
+    flex-direction: column;
+    margin-top: 20px;
+  }
+  .commonStyle{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+  /* Add this to your CSS */
+@keyframes shake {
+  0% { transform: rotate(0deg); }
+  20% { transform: rotate(20deg); }
+  40% { transform: rotate(-20deg); }
+  60% { transform: rotate(20deg); }
+  80% { transform: rotate(-20deg); }
+  100% { transform: rotate(0deg); }
+}
+
+.dice-roll {
+  animation: shake 0.5s;
+}
